# NguyenNguyenHieu_LV1_project_04

./: README.md  pyproject.toml
configs/: database.yml  settings.py
scripts/: generate_data.py  run_reports.py  run_schema.py
sql/data_generation/: 01_insert_orders.sql  02_insert_order_items.sql  03_update_total_amount.sql
sql/explain/: explain_queries.sql
sql/indexes/: create_indexes.sql
sql/reports/: daily_revenue.sql  monthly_revenue.sql  seller_performance.sql
sql/schema/: 01_create_orders.sql  02_create_order_item.sql  03_partitions.sql
src/banking_analytics/: db.py  reports.py
